--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html{
     scroll-behavior: smooth;
 }
 
+/*menu de navegação está pronto, só precisa ficar fixo na tela */
 .header-menu{
     width: 100%;
     height: 100vh;
@@ -51,7 +52,7 @@ html{
     cursor: pointer;
 }
 
-
+/* Pegando os itens com tag "a" de dentro da lista. Precisa colocar apenas o sinal de fechamento*/
 .lista-menu li>a {
     color: #242424; /*Cor do texto*/
     font-size: 22px; /*Tamanho da fonte*/
@@ -65,15 +66,6 @@ html{
     transition: 0.5; /*tempo para trocar de cor quando passar o cursor sobre o item*/
 }
 
-.principal{
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
-}
-
 
 #background img{
     width: 100%;
@@ -83,45 +75,50 @@ html{
     justify-content: center;
     align-items: center;
     display: flex; 
-    flex-direction: column;
-    
+    flex-direction: column;   
 }
 
+
+.principal{
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+}
+
+/* O container é um componente do Bootstrap que garante que o seu layout vai ficar alinhado corretamente na página.
+Ele pode definir as margens laterais da página, ou deixar sem margens e, também, posiciona o conteúdo no
+centro do browser. O container é invisível. */
 .container{
-    margin-right: auto; /*uma margem automática para todos os lados  */
+    margin-right: auto;
     margin-left: auto;
-    margin-top: 30px; /*Margem para cima*/
-    max-width: 960px; /*largura maxima*/
-    padding-right: 10px; /* Espaçamento direito*/
-    padding-left: 10px; /*Espaçamento esquerdo*/
-    width: 100%; /*largura*/
+    margin-top: 75px;
+    max-width: 960px;
+    padding-right: 10px;
+    padding-left: 10px;
+    width: 100%;
     height: 100vh;
 }
 
-
-.subcontainer-principal-1{
-    /*display, flex-direction e justify content são elementos do flexbox que em conjunto, alinham nossos itens*/
-  display: block;
-  flex-direction:column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  position:absolute;
-  top: 200px;
+.subcontainer-principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;   
 }
 
 
-.subcontainer-principal-2{
-    /*display, flex-direction e justify content são elementos do flexbox que em conjunto, alinham nossos itens*/
-  display:block;
-  flex-direction:column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  position:absolute;
-  top: 300px;
-  left: 100px;
-  right: 100px;
+#inicio{
+    display: block;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
+    width: 100%;
+    height: 100%;  
 }
 
 
@@ -154,25 +151,9 @@ html{
     text-align: center;
     background-color: #fbfaf3;
     text-size-adjust:initial;
-    align-content: center;   
-}
-
-
-.texto-sobre {
+    align-content: center;
     width: 100%;
-    height: 100vh;
-    margin-right: 35vh;
-    margin-left: 35vh;
-    margin-top: 0px;
-    max-width: 960px;
-    padding-right: 10px;
-    padding-left: 10px;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100%;   
 }
 
 
@@ -182,6 +163,11 @@ html{
     font-weight: 700;
     text-align: center;
     margin-top: 0px;
+}
+
+.texto-sobre{
+    font-size: 20px;
+    line-height: 32px;
 }
 
 
@@ -196,28 +182,28 @@ html{
 }
 
 
-.topico-principal h3 {
-    color: #0b6050;
-    font-size: 50px;
-    font-weight: 700;
-}
-
-.article-lista{
+  .article-lista{
     display: flex;
     flex-direction: column;
     margin-top: 100px;
     margin-bottom: 100px;
 }
-  
 
+
+.topico-principal {
+    color: #0b6050;
+    font-size: 50px;
+    font-weight: 700;
+}    
 
 
 .container img{
-    height: 600px;
+    height: 500px;
     border-radius: 100%;
+    margin-top: 0%;
     border: 2px solid #f6f0e4;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);   
-    top: 120vh;
+    top: 50vh;
     left: 120px;
     bottom: 120vh;
     display: block;
@@ -238,11 +224,124 @@ html{
     transition: .5s;
 }
 
+#formacao{
+    display: flex;
+    align-items:normal;
+    padding: 60px 50vh 150px 50vh;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+    background-color: #fbfaf3;
+    text-size-adjust:initial;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+}
 
 
+#habilidades{
+    display: flex;
+    align-items:normal;
+    padding: 60px 50vh 150px 50vh;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+    background-color: #fbfaf3;
+    text-size-adjust:initial;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+#projetos{
+    display: flex;
+    align-items:normal;
+    padding: 60px 50vh 150px 50vh;
+    justify-content: space-between;
+    flex-direction: column;
+    text-align: center;
+    background-color: #fbfaf3;
+    text-size-adjust:initial;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+}
 
 
+.lista-item{
+    padding: 32px;
+}
 
+.lista-item ul li{
+    margin-bottom: 32px; 
+}
+
+.lista-titulo{
+    margin-bottom: 5px;
+    font-size: 22px;
+    color: #661e4b;
+    font-weight: 700;
+}
+
+.lista-local{
+    font-size: 18px;
+    color: #2f80ed;
+}
+
+
+.lista-descrição{
+    font-size: 18px;
+    margin-top: 5px;
+    line-height: 20px;
+    color: #828282;
+    font-weight: 300;
+}
+
+
+.link{
+    color: #0b6050;
+    text-decoration: none;
+    align-items: normal;
+}
+
+.link:hover{
+    text-decoration: underline;
+    color: #07a399;
+    transition: 0.5;
+}
+
+
+.links{
+    color:#242424;
+    text-decoration: none;
+    align-items: normal;
+}   
+  
+
+
+.estilo-icone{
+    font-size: 32px;
+    margin-right: 10px;
+    padding: 5px, 0px, 5px, 0px;
+}
+ 
+.rodape{
+    background-color: #0b6050;
+    height: 200px;
+    display: flex;
+    align-items: center;
+}
+
+.lista-rodape li{
+    color: #242424;
+    font-weight: 500;
+    height: 19px;
+    font-size: 18px;
+    margin-bottom: 16px;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+}
 
 
 /* tentando colocar o efeito "digitação" na div profissao */
