--- a/style.css
+++ b/style.css
@@ -1,389 +1,367 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Josefin Sans', sans-serif;
-}    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Josefin Sans", sans-serif;
+}
 
-html{
-    scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 /*menu de navegação está pronto, só precisa ficar fixo na tela */
-.header-menu{
-    width: 100%;
-    background-color: #0b6050;
+.header-menu {
+  width: 100%;
+  background-color: #0b6050;
 }
 
-
-.header-menu nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 25px;
-    padding-bottom: 20px; 
-    position: relative;
-    margin-bottom: auto;
-    border-bottom: 2px solid #0b6050;
-    transition: .7s; 
+.header-menu nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 25px;
+  padding-bottom: 20px;
+  position: relative;
+  margin-bottom: auto;
+  border-bottom: 2px solid #0b6050;
+  transition: 0.7s;
 }
 
-
-.iniciais{
-    color: #242424;
-    font-size: 20px;
-    font-weight: 500;
+.logo {
+  color: #242424;
+  font-size: 20px;
+  font-weight: 500;
 }
 
-.iniciais span{
-    color: #07a399;
+.logo span {
+  color: #07a399;
 }
 
-
-.lista-menu li{
-    color: #242424;
-    list-style: none;
-    display: inline-block; /*todos os itens na mesma linha*/
-    font-size: 15px;
-    margin-right: 40px; /* distância entre os itens*/
-    justify-content: space-evenly;
-    cursor: pointer;
+.lista-menu li {
+  color: #242424;
+  list-style: none;
+  display: inline-block; /*todos os itens na mesma linha*/
+  font-size: 15px;
+  margin-right: 40px; /* distância entre os itens*/
+  justify-content: space-evenly;
+  cursor: pointer;
 }
 
 /* Pegando os itens com tag "a" de dentro da lista. Precisa colocar apenas o sinal de fechamento*/
-.lista-menu li>a {
-    color: #242424; /*Cor do texto*/
-    font-size: 22px; /*Tamanho da fonte*/
-    font-weight: 300;
-    text-decoration: inherit; /*tirando o sublinhado*/
+.lista-menu li > a {
+  color: #242424; /*Cor do texto*/
+  font-size: 22px; /*Tamanho da fonte*/
+  font-weight: 300;
+  text-decoration: inherit; /*tirando o sublinhado*/
 }
 
-
-.lista-menu li>a:hover{ /*Trocar a cor quando passar o cursor sobre o item*/
-    color: #07a399;
-    transition: 0.5; /*tempo para trocar de cor quando passar o cursor sobre o item*/
+.lista-menu li > a:hover {
+  /*Aplica estilos em um link quando o mouse passa por cima dele*/
+  color: #07a399; /*Trocar a cor quando passar o cursor sobre o item*/
+  transition: 0.5; /*tempo para trocar de cor quando passar o cursor sobre o item*/
 }
 
+/* #background img {
+  width: 100%;
+  height: 70vh;
+  background-position: 100%;
+  background-size: auto;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+} */
 
-#background img{
-    width: 100%;
-    height: 70vh;
-    background-position: 50%;
-    background-size: auto;
-    justify-content: center;
-    align-items: center;
-    display: flex; 
-    flex-direction: column;   
-}
-
-
-.principal{
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: absolute;
+.principal {
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
 }
 
 /* O container é um componente do Bootstrap que garante que o seu layout vai ficar alinhado corretamente na página.
 Ele pode definir as margens laterais da página, ou deixar sem margens e, também, posiciona o conteúdo no
 centro do browser. O container é invisível. */
-.container{
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 75px;
-    max-width: 960px;
-    padding-right: 10px;
-    padding-left: 10px;
-    width: 100%;
-    height: 100vh;
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  max-width: 960px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 0px;
+  padding-bottom: 20px;
+  width: 100%;
+  height: 100vh;
+  position: relative;
 }
 
-.subcontainer-principal{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;   
+.subcontainer-principal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
 }
 
-
-#inicio{
-    background-image: url("img/fundo-tech.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center; 
-    width: 100%;
-    height: 83vh;  
+#inicio {
+  background-image: url("img/fundo-tech.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 83vh;
 }
 
-.fundo{
-    position: absolute;
+.fundo {
+  position: absolute;
 }
 
-.cor-de-fundo{
-    width: 100%;
-    border-top: 69px solid #0b6050;
+.cor-de-fundo {
+  /* Barra inferior à imagem*/
+  width: 100%;
+  border-top: 69px solid #0b6050;
 }
 
-
-.nome-completo{
-    font-size: 70px;
-    color: #f4f4f4;
-    font-weight: 700; /*espessura da letra*/
-    height: 60px;
-    text-shadow: rgb(36, 36, 36) 0px 0px 10px
+.nome-completo {
+  font-size: 70px;
+  color: #f4f4f4;
+  font-weight: 700; /*espessura da letra*/
+  height: 60px;
+  text-shadow: rgb(36, 36, 36) 0px 0px 10px;
 }
-
 
 .profissao {
-    font-size: 48px;
-    color: #242424;
-    text-align: center;
-    color:#242424;
-    text-shadow: rgb(7, 163, 153) 0px 0px 10px;
-    font-weight: 700;
-    height:0%;    
+  font-size: 48px;
+  color: #242424;
+  text-align: center;
+  color: #242424;
+  text-shadow: rgb(7, 163, 153) 0px 0px 10px;
+  font-weight: 700;
+  height: 0%;
 }
 
-
-#sobre{
-    display: flex;
-    align-items:normal;
-    padding: 60px 50vh 150px 50vh;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
-    background-color: #fbfaf3;
-    text-size-adjust:initial;
-    align-content: center;
-    width: 100%;
-    height: 100%;   
+#sobre {
+  display: flex;
+  align-items: normal;
+  padding: 0px 50vh 150px 50vh;
+  justify-content: space-between;
+  flex-direction: column;
+  text-align: center;
+  background-color: #fbfaf3;
+  text-size-adjust: initial;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
-
 
 .texto-sobre h2 {
-    color: #0b6050;
-    font-size: 50px;
-    font-weight: 700;
-    text-align: center;
-    margin-top: 0px;
+  color: #0b6050;
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 50px;
 }
 
-.texto-sobre{
-    font-size: 20px;
-    line-height: 32px;
+.texto-sobre p {
+  color: #242424;
+  font-size: 20px;
+  line-height: 32px; /* Espaçamento entre as linhas */
+  font-weight: 400;
+  text-align: justify;
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
-
-.texto-sobre p{
-    color: #242424;
-    font-size: 20px;
-    line-height: 32px; /* Espaçamento entre as linhas */
-    font-weight: 400;
-    text-align:justify;
-    display: block;
-    width: 100%;  
+.article-lista {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  width: 100%;
+  justify-content: center;
 }
-
-
-  .article-lista{
-    display: flex;
-    flex-direction: column;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
 
 .topico-principal {
-    color: #0b6050;
-    font-size: 50px;
-    font-weight: 700;
-}    
-
-
-.container img{
-    height: 500px;
-    border-radius: 100%;
-    margin-top: 0%;
-    border: 2px solid #f6f0e4;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);   
-    top: 50vh;
-    left: 120px;
-    bottom: 120vh;
-    display: block;
-    align-content: center;
-    justify-content: center;
-    transition: .5s;
-    cursor: pointer;
+  color: #0b6050;
+  font-size: 50px;
+  font-weight: 700;
 }
 
-
-.container img:hover{
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    transition: .5s;   
+.container img {
+  height: 400px;
+  border-radius: 100%;
+  border: 2px solid #f6f0e4;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  transition: 0.7s;
+  cursor: pointer;
+  position: relative;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 
-.container img:hover{
-    scale: 1.2;
-    transition: .5s;
+.container img:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
 }
 
-#formacao{
-    display: flex;
-    align-items:normal;
-    padding: 60px 50vh 150px 50vh;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
-    background-color: #fbfaf3;
-    text-size-adjust:initial;
-    align-content: center;
-    width: 100%;
-    height: 100%;
+.container img:hover {
+  scale: 1.2;
+  transition: 0.5s;
 }
 
-
-#habilidades{
-    display: flex;
-    align-items:normal;
-    padding: 60px 50vh 150px 50vh;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
-    background-color: #fbfaf3;
-    text-size-adjust:initial;
-    align-content: center;
-    width: 100%;
-    height: 100%;
+#formacao {
+  display: flex;
+  align-items: normal;
+  padding: 60px 50vh 150px 50vh;
+  justify-content: space-between;
+  flex-direction: column;
+  text-align: center;
+  background-color: #fbfaf3;
+  text-size-adjust: initial;
+  align-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-#projetos{
-    display: flex;
-    align-items:normal;
-    padding: 60px 50vh 150px 50vh;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
-    background-color: #fbfaf3;
-    text-size-adjust:initial;
-    align-content: center;
-    width: 100%;
-    height: 100%;
+#habilidades {
+  display: flex;
+  align-items: normal;
+  padding: 60px 50vh 150px 50vh;
+  justify-content: space-between;
+  flex-direction: column;
+  text-align: center;
+  background-color: #fbfaf3;
+  text-size-adjust: initial;
+  align-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-
-.lista-item{
-    padding: 32px;
+#projetos {
+  display: flex;
+  align-items: normal;
+  padding: 60px 50vh 150px 50vh;
+  justify-content: space-between;
+  flex-direction: column;
+  text-align: center;
+  background-color: #fbfaf3;
+  text-size-adjust: initial;
+  align-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.lista-item ul li{
-    margin-bottom: 32px; 
+.lista-item {
+  padding: 32px;
 }
 
-.lista-titulo{
-    margin-bottom: 5px;
-    font-size: 22px;
-    color: #661e4b;
-    font-weight: 700;
+.lista-item ul li {
+  margin-bottom: 32px;
 }
 
-.lista-local{
-    font-size: 18px;
-    color: #2f80ed;
+.lista-titulo {
+  margin-bottom: 5px;
+  font-size: 22px;
+  color: #661e4b;
+  font-weight: 700;
 }
 
-
-.lista-descrição{
-    font-size: 18px;
-    margin-top: 5px;
-    line-height: 20px;
-    color: #828282;
-    font-weight: 300;
+.lista-local {
+  font-size: 18px;
+  color: #2f80ed;
 }
 
-
-.link{
-    color: #0b6050;
-    text-decoration: none;
-    align-items: normal;
+.lista-descrição {
+  font-size: 18px;
+  margin-top: 5px;
+  line-height: 20px;
+  color: #828282;
+  font-weight: 300;
 }
 
-.link:hover{
-    text-decoration: underline;
-    color: #07a399;
-    transition: 0.5;
+.link {
+  color: #0b6050;
+  text-decoration: none;
+  align-items: normal;
 }
 
-
-.links{
-    color:#242424;
-    text-decoration: none;
-    align-items: normal;
-}   
-  
-
-
-.estilo-icone{
-    font-size: 32px;
-    margin-right: 10px;
-    padding: 5px, 0px, 5px, 0px;
-}
- 
-.rodape{
-    background-color: #0b6050;
-    height: 200px;
-    display: flex;
-    align-items: center;
+.link:hover {
+  text-decoration: underline;
+  color: #07a399;
+  transition: 0.5;
 }
 
-.lista-rodape li{
-    color: #242424;
-    font-weight: 500;
-    height: 19px;
-    font-size: 18px;
-    margin-bottom: 16px;
-    display: flex;
-    align-items: center;
-    padding: 15px;
+.links {
+  color: #242424;
+  text-decoration: none;
+  align-items: normal;
 }
 
+.estilo-icone {
+  font-size: 32px;
+  margin-right: 10px;
+  padding: 5px, 0px, 5px, 0px;
+}
+
+.rodape {
+  background-color: #0b6050;
+  height: 200px;
+  display: flex;
+  align-items: center;
+}
+
+.lista-rodape li {
+  color: #242424;
+  font-weight: 500;
+  height: 19px;
+  font-size: 18px;
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  padding: 15px;
+}
 
 /* tentando colocar o efeito "digitação" na div profissao */
-.profissao::after{
-    content: "|";
-    position: absolute;
-    height: 100%;
-    margin-left: 1px solid #242424;
-    background-color: rgb(7, 163, 153) 0px 0px 10px;
-    right: -10px;
-    opacity: 1;
-    animation: cursor .9s infinite normal none running;
-    
+.profissao::after {
+  content: "|";
+  position: absolute;
+  height: 100%;
+  margin-left: 1px solid #242424;
+  background-color: rgb(7, 163, 153) 0px 0px 10px;
+  right: -10px;
+  opacity: 1;
+  animation: cursor 0.9s infinite normal none running;
 }
 
 @keyframes cursor {
-    0% { 
-        opacity: 0;
-    }    
+  0% {
+    opacity: 0;
+  }
 }
-
 
 @keyframes typing {
-    from{
-        width: 0;
-    }
+  from {
+    width: 0;
+  }
 
-    to{
-        width: 23;
-    }
+  to {
+    width: 23;
+  }
 }
-
