--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ centro do browser. O container é invisível. */
 #sobre {
   display: flex;
   align-items: normal;
-  padding: 0px 50vh 150px 50vh;
+  padding: 0px 50vh 90px 50vh;
   justify-content: space-between;
   flex-direction: column;
   text-align: center;
@@ -173,6 +173,7 @@ centro do browser. O container é invisível. */
   font-weight: 700;
   text-align: center;
   margin-top: 50px;
+  padding-top: 0px;
 }
 
 .texto-sobre p {
@@ -184,6 +185,7 @@ centro do browser. O container é invisível. */
   display: flex;
   width: 100%;
   justify-content: center;
+  align-items: center; 
 }
 
 .article-lista {
@@ -210,7 +212,7 @@ centro do browser. O container é invisível. */
   transition: 0.7s;
   cursor: pointer;
   position: relative;
-  margin-top: 0px;
+  margin-top: 50px;
   margin-bottom: 0px;
   margin-right: 0px;
   margin-left: 0px;
@@ -228,8 +230,13 @@ centro do browser. O container é invisível. */
 
 #formacao {
   display: flex;
+  position: relative;
   align-items: normal;
-  padding: 60px 50vh 150px 50vh;
+  padding: 0px 50vh 150px 50vh;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
   justify-content: space-between;
   flex-direction: column;
   text-align: center;
@@ -238,6 +245,15 @@ centro do browser. O container é invisível. */
   align-content: center;
   width: 100%;
   height: 100%;
+}
+
+.article-lista h2{
+  color: #0b6050;
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 50px;
+  padding-top: inherit;
 }
 
 #habilidades {
